Fixed an issue where collapsing a TV Show with the episodes still open would only cause the seasons to collapse.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -133,17 +133,21 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .show-selected {
-  border: 2px solid #337AB7 !important;
+  border: 2px solid #337ab7 !important;
 }
 
 .show-selected > tr:first-child {
-  background-color: #D3E4F2 !important;
-  border-bottom: 2px solid #337AB7 !important;
+  background-color: #d3e4f2 !important;
+  border-bottom: 2px solid #337ab7 !important;
   font-weight: bold !important;
 }
 
 table.shows tbody {
   border-top: none;
+}
+
+table.shows tbody:first-child tr:first-child {
+  border-top: 2px solid #ddd !important;
 }
 
 .season-name {
